--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "tiktok-live-connector": "^1.0.3",
     "ws": "^8.13.0"
   }
 }
